# multinf-ws1011

./: .gitignore  Serie02.docx  Serie08.docx  Serie12.docx
Serie 10/: Serie10.tex  Serie10A2.xlsx
emiv-S01-G02/: CMakeLists.txt  HelloWorld.cpp
emiv-S02-G02/: CMakeLists.txt  CMakeLists.txt~  testGraphics2D.cpp
emiv-S02-G02/Graphics2D/: CMakeLists.txt~  Image.cpp  Image.cpp~  Image.hh  Image.hh~
emiv-S02-G02/Graphics2DBase/: ImageBase.cpp  ImageBase.hh
emiv-S03-G02/: CMakeLists.txt  testPrimitivePoint.cpp  testPrimitives.cpp
emiv-S03-G02/Graphics2D/: CMakeLists.txt  Color.cpp  Color.hh  Coordinate.cpp  Coordinate.hh  Image.cpp  PrimitiveBase.cpp  PrimitiveBase.hh  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePoint.cpp  PrimitivePoint.hh
emiv-S03-G02/Graphics2DBase/: ImageBase.hh
emiv-S04-G02/: CMakeLists.txt  testGUI.cpp  testPrimitives.cpp
emiv-S04-G02/Graphics2D/: BackgroundImage.cpp  BackgroundImage.hh  BoxModusController.cpp  BoxModusController.hh  CMakeLists.txt  Coordinate.cpp  Coordinate.hh  Image.cpp  Image.hh  LineModusController.cpp  LineModusController.hh  ModusController.cpp  ModusController.hh  Painter.cpp  Painter.hh  PointModusController.cpp  PointModusController.hh  PolygonModusController.cpp  PolygonModusController.hh  PrimitiveBase.cpp  PrimitiveBox.cpp  PrimitiveBox.hh  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePoint.cpp  PrimitivePoint.hh  PrimitivePolygon.cpp  PrimitivePolygon.hh
emiv-S04-G02/Graphics2D/Controller/: LineModusController.cpp  PointModusController.hh  PolygonModusController.cpp
emiv-S04-G02/Graphics2DBase/: CMakeLists.txt  Canvas2D.cpp  Canvas2D.hh  Canvas2Dglut.cpp  Canvas2Dgtk.cpp
emiv-S05-G02/: CMakeLists.txt  testGUI.cpp  testPrimitives.cpp  testScanline.cpp
emiv-S05-G02/Graphics2D/: BackgroundImage.hh  CMakeLists.txt  Coordinate.cpp  Coordinate.hh  Painter.cpp  Painter.hh  PrimitiveBox.cpp  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePoint.cpp  PrimitivePoint.hh  PrimitivePolygon.cpp  PrimitivePolygon.hh  PrimitiveStar.cpp  PrimitiveStar.hh
emiv-S05-G02/Graphics2D/Controller/: BoxModusController.cpp  BoxModusController.hh  ModusController.cpp  PointModusController.cpp  StarModusController.cpp  StarModusController.hh
emiv-S05-G02/Graphics2DBase/: CMakeLists.txt  Canvas2Dglut.cpp  Canvas2Dglut.hh  ImageBase.cpp  ImageBase.hh  PrimitiveBase.cpp  PrimitiveBase.hh
emiv-S06-G02/: CMakeLists.txt  testGUI.cpp
emiv-S06-G02/Graphics2D/: BackgroundImage.hh  CMakeLists.txt  ColorConversion.cpp  ColorConversion.hh  Histogram.cpp  Histogram.hh  Painter.cpp  Painter.hh  PrimitivePolygon.cpp  PrimitiveStar.cpp
emiv-S06-G02/Graphics2DBase/: Canvas2Dglut.cpp  Canvas2Dgtk.cpp  Canvas2Dgtk.hh  ImageBase.cpp  ImageBase.hh
emiv-S07-G02/: CMakeLists.txt  FindGTK2.cmake  testFilter.cpp
emiv-S07-G02/Graphics2D/: Filter.cpp  Filter.hh  Image.hh
emiv-S07-G02/Graphics2D/Controller/: BoxModusController.cpp  LineModusController.cpp  ModusController.hh
emiv-S07-G02/Graphics2DBase/: Canvas2Dgtk.cpp
emiv-S08-G02/: testFilter2.cpp
emiv-S08-G02/Graphics2D/: Filter.cpp  Filter.hh  PrimitiveLine.cpp
emiv-S08-G02/Graphics2D/Controller/: LineModusController.hh
emiv-S08-G02/Graphics2DBase/: CMakeLists.txt
emiv-S09-G02/: CMakeLists.txt  testConversion.cpp  testGraphics2D.cpp  testSegmentation.cpp
emiv-S09-G02/Graphics2D/: CMakeLists.txt  Coordinate.cpp  Coordinate.hh  Image.cpp  Image.hh  Segmentation.cpp  Segmentation.hh
emiv-S09-G02/Graphics2D/Controller/: PointModusController.hh
emiv-S10-G02/: CMakeLists.txt  RoundnessLimits.hh  Serie10.tex  liste-rundheit.txt  roundness.txt  testFeatures.cpp  testFilter.cpp  testSegmentation.cpp
emiv-S10-G02/Graphics2D/: CMakeLists.txt  Color.cpp  ColorConversion.hh  Segmentation.cpp
emiv-S10-G02/Graphics2D/Controller/: PointModusController.cpp  PolygonModusController.hh
emiv-S10-G02/Graphics2DBase/: Canvas2D.hh
emiv-S11-G02/: CMakeLists.txt  testScanline.cpp  testStructureTensor.cpp
emiv-S11-G02/Graphics2D/: CMakeLists.txt  Filter.cpp  Segmentation.hh  StructureTensor.cpp  StructureTensor.hh
emiv-S11-G02/Graphics2D/Controller/: StarModusController.hh
emiv-S11-G02/Graphics2DBase/: CMakeLists.txt  Canvas2Dglut.hh  FloatImage.hh
emiv-S12-G02/: CMakeLists.txt  generateHoughTestImages.cpp  houghTransform.cpp  testGUI.cpp  testSegmentation.cpp
emiv-S12-G02/Graphics2D/: Coordinate.cpp  Filter.cpp  Filter.hh  HoughTransform.cpp  HoughTransform.hh  PrimitivePolygon.hh  Segmentation.cpp  StructureTensor.hh
emiv-S12-G02/Graphics2D/Controller/: BoxModusController.hh  ModusController.cpp  PolygonModusController.cpp
emiv-S12-G02/Graphics2DBase/: FloatImage.cpp  FloatImage.hh
emiv-S13-G02/: CMakeLists.txt  borderDetection.cpp  showImage.cpp  testFeatures.cpp
emiv-S13-G02/Graphics2D/: CMakeLists.txt  ColorConversion.cpp  Coordinate.cpp  Coordinate.hh  Filter.cpp  Filter.hh  HoughTransform.cpp  Painter.cpp  PrimitiveBox.hh  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePolygon.cpp  StructureTensor.cpp  StructureTensor.hh
emiv-S13-G02/Graphics2DBase/: FloatImage.hh  ImageBase.hh  PainterBase.hh
pictures/: tannenbaum.ppm  testbild-gradienten.ppm  testbild-median.ppm  testbild-rangfilter.ppm  wasserturm-grey.ppm  wasserturm-small.ppm  wasserturm.ppm
pictures/serie11/: form1.ppm  form2.ppm
pictures/serie9-aufgabe2-testbilder/: circle1.ppm  circle2.ppm  circle3.ppm  circle4.ppm  myQuadrat.ppm  myRectDiagonal.ppm  rectangle1.ppm  rectangle2.ppm  rectangle3.ppm  rectangle4.ppm  tree1.ppm  tree2.ppm  tree3.ppm  tree4.ppm
