
FIND_PACKAGE(OpenGL)
IF(NOT OPENGL_FOUND)
MESSAGE(SEND_ERROR "OpenGL not found.")
ENDIF(NOT OPENGL_FOUND)

FIND_PACKAGE(GLUT)
IF(NOT GLUT_FOUND)
MESSAGE(SEND_ERROR "GLUT not found.")
ENDIF(NOT GLUT_FOUND)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})

SET(EXT_LIBRARIES ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${DC1394_LIBRARIES})

ADD_LIBRARY(Graphics2DBase 
    ImageBase.cpp 
    ImageBase.hh
    PainterBase.hh
    Canvas2D.cpp
    Canvas2D.hh
    )
TARGET_LINK_LIBRARIES(Graphics2DBase ${EXT_LIBRARIES})